# ROS

bipedo/bipedo_control/: CMakeLists.txt  package.xml
bipedo/bipedo_description/: CMakeLists.txt  package.xml
bipedo/bipedo_gazebo/: CMakeLists.txt  package.xml
cuadrupedo/cuadrupedo_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cuadrupedo/cuadrupedo_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cuadrupedo/cuadrupedo_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
hexapodo/hexapodo_control/: CMakeLists.txt  package.xml
hexapodo/hexapodo_description/: CMakeLists.txt  package.xml
hexapodo/hexapodo_gazebo/: CMakeLists.txt  package.xml
manipulador/abb_irb_120_control/: CMakeLists.txt  package.xml  package.xml~
manipulador/abb_irb_120_description/: CMakeLists.txt  package.xml
manipulador/abb_irb_120_gazebo/: CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  package.xml~
manipulador/abb_irb_120_gazebo/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
manipulador/abb_irb_120_gazebo/catkin_generated/installspace/: abb_irb120_gazebo.pc  abb_irb120_gazeboConfig.cmake
manipulador/abb_irb_120_gazebo/launch/: irb120_control.launch~  irb120_gazebo.launch  irb120_gazebo.launch~  load_irb120.launch  load_irb120.launch~
manipulador/abb_irb_120_gazebo/urdf/: abb_irb_120_grande.urdf  abb_irb_120_peq.urdf  abb_irb_120_peq.urdf~  irb120.xacro~  modelo_exportado.urdf~
manipulador/nuestro_abb_irb120/: CMakeLists.txt  CTestTestfile.cmake  (+3 more)
(+200 files in other folders)
